name: hothasktags
version: 0.0.1
cabal-version: >= 1.6 && < 2
build-type: Simple
author: Luke Palmer <lrpalmer@gmail.com>
license: BSD3
maintainer: Luke Palmer <lrpalmer@gmail.com>
category: Development
synopsis: Generates ctags for Haskell, incorporating import lists and qualified imports
description: Generation of ctags files for Haskell, with knowledge of import lists and qualified imports
homepage: http://github.com/luqui/hothasktags
executable hothasktags
    build-depends: 
        base == 4.*,
        containers,
        haskell-src-exts == 1.8.*
    main-is: Main.hs
    ghc-options: -W
