name: hothasktags
version: 0.3.8
cabal-version: >= 1.6
build-type: Simple
author: Luke Palmer <lrpalmer@gmail.com>
license: BSD3
license-file: LICENSE
maintainer: Luke Palmer <lrpalmer@gmail.com>
category: Development
synopsis: Generates ctags for Haskell, incorporating import lists and qualified imports
description:
    hothasktags generates ctags files for Haskell, with knowledge of import lists
    and qualified imports.  It provides a smart go-to-definition for Vim, that almost
    always gets it right in the presence of multiple names from different modules.
    .
    You will want to configure Vim to allow dots in keywords, because hothasktags
    generates tags for qualified names.  You can do this with:
    .
    > set iskeyword=a-z,A-Z,_,.,39
    .
    (The 39 is for the prime character)
    .
    Usage is easy, just give hothasktags the names of all the haskell sources you
    want to index and redirect into a tags file.  For example:
    .
    > find . -name '*.hs' | xargs hothasktags > tags
    .
    will index all the hs files under the current directory.
homepage: http://github.com/luqui/hothasktags
source-repository head
    type: git
    location: git://github.com/luqui/hothasktags.git
executable hothasktags
    build-depends:
        base == 4.*,
        array,
        containers,
        filepath,
        filemanip,
        Glob,
        haskell-src-exts >= 1.17 && < 1.18,
        cpphs >= 1.11 && < 1.21,
        optparse-applicative >= 0.13,
        split
    main-is: Main.hs
    ghc-options: -W
